flux/clusters/talos/apps/authelia/headers-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: secure-headers
  namespace: authelia
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
