flux/clusters/talos/apps/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.jeans-host.net`)
      kind: Rule
      services:
        - name: authelia
          port: 80
